[package]
name = "eloquent"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tjardoo/eloquent-rs"
description = "An enjoyable way of interacting with the database."

[workspace]
members = [
    "eloquent_core",
]

[dependencies]
eloquent_core = { path = "eloquent_core", version = "0.1.1" }
