[package]
name = "eloquent"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Rust library for building queries in an eloquent way."
repository = "https://github.com/tjardoo/eloquent-rs"
documentation = "https://docs.rs/eloquent-rs"
keywords = ["database", "query"]

[workspace]
members = [
    "eloquent_core",
]

[dependencies]
eloquent_core = { path = "eloquent_core" }
