[package]
name = "eloquent"
version = "2.0.1"
edition = "2021"
license = "MIT"
description = "Eloquent is a SQL query builder to easily build complex queries in Rust."
repository = "https://github.com/tjardoo/eloquent-rs"
documentation = "https://docs.rs/eloquent"
keywords = ["database", "query", "sql"]

[dependencies]
eloquent_core = { path = "../eloquent_core", version = "2.0" }

[lib]
doctest = false
