[package]
name = "eloquent_core"
version = "2.0.2"
edition = "2021"
license = "MIT"
description = "Core query builder component for Eloquent."
repository = "https://github.com/tjardoo/eloquent-rs"
documentation = "https://docs.rs/eloquent"

[dependencies]
sqlformat = "0.2.0"
log = "0.4"

[lib]
doctest = true
