[package]
name = "eloquent_core"
version = "2.1.0"
edition = "2021"
license = "MIT"
description = "Core query builder component for Eloquent."
repository = "https://github.com/tjardoo/eloquent-rs"
documentation = "https://docs.rs/eloquent"

[dependencies]
sqlformat = "0.5.0"
log = "0.4"

[lib]
doctest = true

[features]
default = []
enable-raw = []
nullable-types = []
bind-placeholder-questionmark = []
